Release 1.1.92.13 (#11)